Fix align

--- a/EnhancingTrust/src/styles/app.scss
+++ b/EnhancingTrust/src/styles/app.scss
@@ -44,6 +44,7 @@
 
   .overlay {
     &__wrapper {
+      text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
